Fix bug JSON.parse and fs z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,6 +28,7 @@
         height: 100%;
     }
     .btn-fs {
+        z-index: 2;
         position: fixed;
         top: 10px;
         right: 10px;
